--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ clap-verbosity-flag = "3.0.0"
 colorgrad = "0.8.0"
 serde_json = "1.0.133"
 
+postcard = { version = "1.1.3", features = [ "alloc" ] }
+rusqlite = "0.38.0"
 
 [workspace]
 members = ["bt2-derive", "bt2-sys"]
