--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,11 @@ postcard = { version = "1.1.3", features = [ "alloc" ] }
 rusqlite = "0.38.0"
 serde_qs = "1.0.0"
 
+itertools = "0.14.0"
+
+plotters = { version = "0.3.7", features = [] }
+plotters-svg = "0.3.7"
+
 [workspace]
 members = ["bt2-derive", "bt2-sys"]
 
